[package]
name = "XGurdian 4.0"
version = "0.1.0"
edition = "2024"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A GPS data processing tool"
license = "MIT OR Apache-2.0"
[dependencies]


rand = "0.9.2"
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
base64 = "0.22.1"
time = "0.3.41"
